# bartender_robot

./: .gitignore  1_ready.csv  2_move_drink1.csv  2_move_drink2.csv  3_descend1.csv  3_descend2.csv  4_ascend1.csv  4_ascend2.csv  5_to_user1.csv  5_to_user2.csv  CMakeLists.txt  README.md  case1.csv  case1_final.csv  case2.csv  case2_final.csv  case3_final.csv  commands_log.txt  dispenser1_user.csv  dispenser2_user.csv  dispenser3_user.csv  env  package.xml  start_dispenser1.csv  start_dispenser2.csv  start_dispenser3.csv
bartender_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
bartender_moveit_config/config/: bartender_robot.ros2_control.xacro  bartender_robot.srdf  bartender_robot.urdf.xacro  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
bartender_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  save_plan.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  trajectory_generator.py  warehouse_db.launch.py
bartender_robot/: CMakeLists.txt  README.md  env  package.xml
bartender_robot/launch/: gz_sim.launch.py  rviz.launch.py
bartender_robot/meshes/: back1.stl  back2.stl  base_link.stl  lower_arm2.stl  shoulder_motor_fix.stl
bartender_robot/src/: api.cpp  api.hpp  dynamixel_controller.cpp  dynamixel_controller.hpp  joint_state_publisher.cpp  joint_state_publisher.hpp  keyboard_teleop.cpp  keyboard_teleop.hpp  main.cpp  plan_player.cpp  plan_player.hpp
bartender_robot/urdf/: bartender_robot.urdf
config/: bartender_robot.srdf  bartender_robot.srdf.xacro  bartender_robot.urdf.xacro  controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
demo/config/: gripper_controller_effort.yaml
demo/launch/: gripper_mimic_joint_example_effort.launch.py
demo/urdf/: test_gripper_mimic_joint_effort.xacro.urdf
include/PCA9685/: CMakeLists.txt
include/PCA9685/src/: Constants.hpp  I2CPeripheral.cpp  PCA9685.cpp
launch/: dynamixel_controller.launch.py  gz_sim.launch.py  moveit_demo.launch.py  rviz.launch.py  spawn_gazebo.launch.py  view_robot.launch.py  visualize.launch.py
meshes/: C_E604ZZ_LB_1.stl  C_E604ZZ_LT_1.stl  C_E604ZZ_RB_1.stl  C_E604ZZ_RT_1.stl  C_E604ZZ_gear_1.stl  Gripper_Link_Bot_L_1.stl  Gripper_Link_Bot_R_1.stl  Gripper_Link_Top_L_1.stl  Gripper_Link_Top_R_1.stl  Hinge_pin_LF_1.stl  Hinge_pin_LR_1.stl  Hinge_pin_RF_1.stl  Hinge_pin_RR_1.stl  Left_hand_1.stl  Main_Frame_Bot_1.stl  Main_Frame_Top_1.stl  Motor_Casing_1.stl  Right_hand_1.stl  XL_430_base_1.stl  XL_430_gripper_1.stl  XL_430_lower.stl  XL_430_lower1_1.stl  XL_430_shoulder_1.stl  XL_430_upper_1.stl  base_link.stl  base_upperplate_1.stl  bearing_shoulder_1.stl  gripper_back1_1.stl  gripper_back2_1.stl  gripper_gear_left_1.stl  gripper_gear_right_1.stl  horn_base.stl  horn_base_1.stl  horn_gripper_1.stl  horn_lower_1.stl  horn_shoulder_1.stl  horn_upper_1.stl  link1_1.stl  link2_1.stl  link3_1.stl  (+34 more)
rviz/: default.rviz  robot.rviz
src/: dynamixel_controller.cpp  dynamixel_controller.hpp  joint_state_publisher.cpp  keyboard_teleop.cpp  keyboard_teleop.hpp  main.cpp  motion_planning_node.cpp  motion_planning_node.hpp
src/lib/api/: api.cpp  api.hpp
src/lib/llm/: llm.cpp  llm.hpp
src/lib/motor/: i2c.hpp  pca9685_servo.cpp  pca9685_servo.hpp
urdf/: bartender_robot.gazebo  bartender_robot.gazebo.xacro  bartender_robot.trans  bartender_robot.trans.xacro  bartender_robot.urdf  bartender_robot.xacro  materials.xacro  test_assembly3.gazebo  test_assembly3.trans  test_assembly3.xacro
urdf_old/: bartender_robot.gazebo  bartender_robot.trans  bartender_robot.xacro
worlds/: empty.sdf
