<?xml version="1.0"?>
<package format="3">
  <name>bartender_robot</name>
  <version>0.0.0</version>
  <description>The bartender_robot package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
