<?xml version="1.0"?>
<package format="3">
  <name>bartender_robot</name>
  <version>0.0.0</version>
  <description>The bartender_robot package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime / build dependencies for viewing model in RViz and spawning in Gazebo -->
  <build_depend>xacro</build_depend>
  <build_depend>ament_index_python</build_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
