<?xml version="1.0"?>
<package format="3">
  <name>bartender_robot</name>
  <version>0.0.0</version>
  <description>The bartender_robot package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime / build dependencies for viewing model in RViz and spawning in Gazebo -->
  <build_depend>xacro</build_depend>
  <build_depend>ament_index_python</build_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamixel_sdk</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

 <!-- Gazebo dependencies -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <exec_depend>controller_manager</exec_depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
